--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -9528,6 +9528,18 @@ They used a simple NNI for rooted trees},
   Volume                   = {22}
 }
 
+@Article{Zhang2016,
+  Title                    = {Total-Evidence Dating under the Fossilized Birth-Death Process},
+  Author                   = {Zhang, Chi and Stadler, Tanja and Klopfstein, Seraina and Heath, Tracy A. and Ronquist, Fredrik},
+  Journal                  = {Systematic Biology},
+  Year                     = {2016},
+  Number                   = {2},
+  Pages                    = {228-249},
+  Volume                   = {65},
+  Doi                      = {10.1093/sysbio/syv080},
+  Eprint                   = {http://sysbio.oxfordjournals.org/content/65/2/228.full.pdf+html}
+}
+
 
 @comment{jabref-meta: selector_publisher:}
 
